# maestro-tuya-ir

./: .env.example  .stacktapeignore  .vercelignore  @CLAUDE.md  ANALYSIS.md  BINDINGS.md  CLAUDE.md  CODE_REVIEW.md  COMPRESSION_TEST_RESULTS.md  DEPLOYMENT.md  DEPLOYMENT_ISSUE.md  Dockerfile  Dockerfile.lambda  FINAL_TEST_COMMAND.txt  FUJITSU_TEST_CODES.md  IR_PROTOCOL_README.md  IR_TRANSLATIONS_README.md  MAESTRO_IR_BRIDGE_SPEC.md  Makefile  PROTOCOL_TIMINGS.md  README.md  TEST_CODES_QUICK_REF.md  TEST_CODES_TO_TRY.txt  TEST_CODES_V2.txt  TEST_CODES_V3_CORRECT_CHECKSUM.txt  TEST_COMMAND.txt  TEST_COOL_20C_AUTO.txt  TEST_OFF.txt  TRANSLATION_SCRIPTS_README.md  VERCEL_CPP_BUILD.md  analyze_21c_code.py  analyze_22c_comparison.py  analyze_24c_high.py  analyze_all_codes.py  analyze_tuya_compression_structure.py  build.sh  compare_checksums.py  debug_roundtrip.py  debug_timing_difference.py  example_fujitsu_protocol_access.py  (+31 more)
.claude/: settings.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CONTRIBUTING.md
api/: index.py
app/: settings.py
data/: sample_codes.json
scripts/: __init__.py  build_extensions.py  generate_protocol_timings.py  setup_branch_protection.sh
tests/: test_api_endpoints.py  test_command_generator.py  test_daikin216_integration.py  test_daikin_e2e.py  test_dispatcher_fujitsu.py  test_dispatcher_panasonic.py  test_fastlz.py  test_fujitsu_decoder.py  test_fujitsu_problem.py  test_fujitsu_roundtrip.py  test_fujitsu_snapshots.py  test_generator.py  test_haier_ac176_integration.py  test_hitachi_ac_integration.py  test_integration_api.py  test_manufacturers_api.py  test_protocols.py  (+6 more)
(+96 files in other folders)
