[project]
name = "maestro-tuya-ir-bridge"
version = "1.0.0"
description = "Translate, decode, and generate complete IR command sets for Tuya-based HVAC devices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.scripts]
build-extensions = "scripts.build_extensions:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pybind11>=2.11.0",
]

[build-system]
requires = ["hatchling", "pybind11>=2.11.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pybind11>=3.0.1",
    "setuptools>=80.9.0",
]
